corrected logo on mobile widget

--- a/assets/css/widget.less
+++ b/assets/css/widget.less
@@ -87,7 +87,8 @@
   margin-right: auto;
   position: relative;
   padding-top: 0px;
-  width: 214px;
+  max-width: 214px;
+  width: 100%;
   top: 5px;
 }
 
